--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><i class="fa-solid fa-check"></i>Nhánh "main" gốc</li>
             <!-- Tuấn thêm một dòng li bên dưới này ở nhánh tuan xem  -->
             <!-- Làm theo ví dụ dưới này nhớ là ở nhánh tạo riêng ấy-->
-            <!-- <li><i class="fa-solid fa-check"></i>Tuấn push nhánh "tuan" lần 1</li> -->
+         <li><i class="fa-solid fa-check"></i>Tuấn push nhánh "tuan" lần 1</li>
         </ul>
     </div>
 </body>
