van thay doi main

--- a/index.html
+++ b/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nhom6</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" />
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Nhom6</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" />
+    </head>
 
-<body>
-    <div class="box">
-        <h2 class="box__title">Demo git nhóm 6</h2>
-        
-        <ul class="box__list">
-            <li><i class="fa-solid fa-check"></i>Nhánh "main" gốc</li>
-            <!-- Tuấn thêm một dòng li bên dưới này ở nhánh tuan xem  -->
-            <!-- Làm theo ví dụ dưới này nhớ là ở nhánh tạo riêng ấy-->
-            <!-- <li><i class="fa-solid fa-check"></i>Tuấn push nhánh "tuan" lần 1</li> -->
-            <li><i class="fa-solid fa-check"></i>Khoa push lần 1</li>
-         <li><i class="fa-solid fa-check"></i>Tuấn push nhánh "tuan" lần 1</li>
-        </ul>
-    </div>
-</body>
+    <body>
+        <div class="box">
+            <h2 class="box__title">Demo git nhóm 6</h2>
+
+            <ul class="box__list">
+                <li><i class="fa-solid fa-check"></i>Nhánh "main" gốc</li>
+                <!-- Tuấn thêm một dòng li bên dưới này ở nhánh tuan xem  -->
+                <!-- Làm theo ví dụ dưới này nhớ là ở nhánh tạo riêng ấy-->
+                <!-- <li><i class="fa-solid fa-check"></i>Tuấn push nhánh "tuan" lần 1</li> -->
+                <li><i class="fa-solid fa-check"></i>Khoa push lần 1</li>
+                <li><i class="fa-solid fa-check"></i>Tuấn push nhánh "tuan" lần
+                    1</li>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Nihil assumenda debitis dolores? Non tempore, veniam dolorum
+                    doloremque similique voluptatibus officiis!</p>
+            </ul>
+        </div>
+    </body>
 
 </html>
