--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 
             <ul class="box__list">
                 <li><i class="fa-solid fa-check"></i>Nhánh "main" gốc</li>
-                <!-- Tuấn thêm một dòng li bên dưới này ở nhánh tuan xem  -->
-                <!-- Làm theo ví dụ dưới này nhớ là ở nhánh tạo riêng ấy-->
-                <!-- <li><i class="fa-solid fa-check"></i>Tuấn push nhánh "tuan" lần 1</li> -->
+
                 <li><i class="fa-solid fa-check"></i>Khoa push lần 1</li>
                 <li><i class="fa-solid fa-check"></i>Tuấn push nhánh "tuan" lần
                     1</li>
@@ -30,6 +28,7 @@
                     <h1>hello</h1>
                     <button>them</button>
                 </div>
+                <li><i class="fa-solid fa-check"></i>Khoa push lần 2</li>
             </ul>
         </div>
     </body>
