Khoa push lần 5 git merge

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <li><i class="fa-solid fa-check"></i>Khoa push lần 2</li>
                 <li><i class="fa-solid fa-check"></i>Khoa push lần 3</li>
                 <li><i class="fa-solid fa-check"></i>Khoa push lần 4</li>
+                <li><i class="fa-solid fa-check"></i>Khoa push lần 5 git merge</li>
             </ul>
         </div>
     </body>
