khoa push lan 6 rebase

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <li><i class="fa-solid fa-check"></i>Khoa push lần 3</li>
                 <li><i class="fa-solid fa-check"></i>Khoa push lần 4</li>
                 <li><i class="fa-solid fa-check"></i>Khoa push lần 5 git merge</li>
+                <li><i class="fa-solid fa-check"></i>Khoa push lần 6 git rebase</li>
             </ul>
         </div>
     </body>
