--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
                 <li><i class="fa-solid fa-check"></i>Khoa push lần 5 git merge</li>
                 <li><i class="fa-solid fa-check"></i>Khoa push lần 6 git rebase</li>
                 <!-- Test -->
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Vero, delectus!</p>
             </ul>
         </div>
     </body>
