--- a/index.html
+++ b/index.html
@@ -28,14 +28,8 @@
                     <h1>hello</h1>
                     <button>them</button>
                 </div>
-                <li><i class="fa-solid fa-check"></i>Khoa push lần 2</li>
-                <li><i class="fa-solid fa-check"></i>Khoa push lần 3</li>
-                <li><i class="fa-solid fa-check"></i>Khoa push lần 4</li>
-                <li><i class="fa-solid fa-check"></i>Khoa push lần 5 git merge</li>
-                <li><i class="fa-solid fa-check"></i>Khoa push lần 6 git rebase</li>
-                <!-- Test -->
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Vero, delectus!</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Doloribus, esse.</p>
             </ul>
         </div>
     </body>
